--- a/ktx/build.gradle
+++ b/ktx/build.gradle
@@ -28,9 +28,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.core:core-ktx:1.13.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03'
+    implementation 'com.google.android.material:material:1.12.0-rc01'
     api 'androidx.startup:startup-runtime:1.2.0-alpha02'
 }
 
